Coillapsing height of floated elements has clearfix remedy but collapsing height of parents of elements positioned absolute has no fix in css. To turne back the perpective effect we must give the same heights to the card parent and card-sides children. Perspective means that when rotating the sides they appear as moving towards the viewer.

--- a/sass/components/_card.scss
+++ b/sass/components/_card.scss
@@ -2,6 +2,7 @@
   perspective: 150rem;
   -moz-perspective: 150rem;
   position:relative;
+  height: 50rem;
   
   &__side {
     background-color: orangered;
